--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -9,7 +9,10 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+    #contact-us-form
+        button
+            display: block
+            width: 100%
 
 
 /* Small Devices, Tablets */
@@ -58,9 +61,6 @@
         input,
         textarea
             margin: 0 0 15px
-        button
-            display: block
-            width: 100%
 
     $mobileHeight: 110vh
     #particles-js-container
