--- a/app/sass/_particles.sass
+++ b/app/sass/_particles.sass
@@ -1,13 +1,11 @@
+#particles-js-container,
+#particles-js
+    width: 100%
+    min-height: 100%
+    overflow: hidden
 #particles-js-container
     position: relative
-    width: 100%
-    height: 100%
-    overflow: hidden
-
-    #particles-js
-        width: 100%
-        height: 100%
-        overflow: hidden
+    padding-bottom: 20px
 
     .div-left
         float: left
@@ -61,8 +59,6 @@
     #button-div
         display: flex
         justify-content: center
-        //display: inline-block
-        //margin: 0 auto
 
     canvas
         position: absolute
